# doc/api.yaml
@@ -537,11 +537,11 @@ paths:
         content:
           application/json:
             schema:
-              description: Emoji Code
+              description: Emoji
               type: object
               properties:
-                emojiCode:
-                  $ref: "#/components/schemas/EmojiCode"
+                emoji:
+                  $ref: "#/components/schemas/Emoji"
       responses:
         '201':
           description: Created
@@ -1302,8 +1302,8 @@ components:
       description: Reaction
       type: object
       properties:
-        emojiCode:
-          $ref: "#/components/schemas/EmojiCode"
+        emoji:
+          $ref: "#/components/schemas/Emoji"
         messageId:
           description: Message id
           type: integer
@@ -1320,7 +1320,7 @@ components:
       minLength: 1
       maxLength: 1014
 
-    EmojiCode:
-      description: Emoji code
+    Emoji:
+      description: Emoji
       type: string
       enum: [like, love, laugh, sad, angry, thumb]
